Корректирует блок footer для мобильной версии всех страниц

--- a/source/photo.html
+++ b/source/photo.html
@@ -275,10 +275,10 @@
     <footer class="footer page__footer">
       <div class="footer__wrapper wrapper">
         <a class="footer__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
-          <svg class="footer__logo-link footer__logo-link--glasses" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+          <svg class="footer__logo footer__logo--glasses" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
             <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
           </svg>
-          <svg class="footer__logo-link footer__logo-link--element-decore" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+          <svg class="footer__logo footer__logo--element-decore" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
             <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
           </svg>
         </a>
