--- a/source/index.html
+++ b/source/index.html
@@ -277,12 +277,12 @@
     </main>
     <footer class="footer footer--hidden page__footer">
       <div class="footer__wrapper wrapper">
-        <svg class="footer__logo-link footer__logo-link--glasses" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
-          <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
-        </svg>
-        <svg class="footer__logo-link footer__logo-link--element-decore" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
-          <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
-        </svg>
+          <svg class="footer__logo footer__logo--glasses" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+            <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
+          </svg>
+          <svg class="footer__logo footer__logo--element-decore" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+            <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
+          </svg>
         <ul class="footer__list social-list">
           <li class="social-list__item">
             <a class="social-list__link" href="#" aria-label="Мы в твиттере">
