Корректирует модификатор inner блока intro и блоки photo-content, photo-editor для мобильной версии

--- a/source/photo.html
+++ b/source/photo.html
@@ -50,7 +50,7 @@
       <section class="photo-content">
         <h2 class="visually-hidden">Галерея постов</h2>
         <header class="photo-content__header">
-          <p class="photo-content__description">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
+          <p class="photo-content__description">Взгляните на фотографии, которые выкладывают пользователи! Видите,&nbsp;как&nbsp;не хватает ваших?</p>
         </header>
         <div class="photo-content__list">
           <article class="photo-content__item-panorama post">
@@ -83,8 +83,8 @@
               <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
               <a class="post__link" href="#">
                 <picture class="post__source-photo">
-                  <!-- <source media="()" srcset="">
-                          <source media="()" srcset=""> -->
+                  <source media="(min-width: 1200px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x">
+                  <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x">
                   <img class="post__photo" src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x" alt="Фотограф в процессе работы">
                 </picture>
               </a>
@@ -105,8 +105,8 @@
               <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
               <a class="post__link" href="#">
                 <picture class="post__source-photo">
-                  <!-- <source media="()" srcset="">
-                          <source media="()" srcset=""> -->
+                  <source media="(min-width: 1200px)" srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x">
+                  <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x">
                   <img class="post__photo" src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x" alt="Моя новая барабанная установка">
                 </picture>
               </a>
@@ -127,8 +127,8 @@
               <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
               <a class="post__link" href="#">
                 <picture class="post__source-photo">
-                  <!-- <source media="()" srcset="">
-                          <source media="()" srcset=""> -->
+                  <source media="(min-width: 1200px)" srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x">
+                  <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x">
                   <img class="post__photo" src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x" alt="Стеклянный потолк в здании небоскрёба">
                 </picture>
               </a>
@@ -149,8 +149,8 @@
               <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
               <a class="post__link" href="#">
                 <picture class="post__source-photo">
-                  <!-- <source media="()" srcset="">
-                          <source media="()" srcset=""> -->
+                  <source media="(min-width: 1200px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x">
+                  <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x">
                   <img class="post__photo" src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg" alt="Ярмарка Кубанская бахча">
                 </picture>
               </a>
@@ -171,8 +171,8 @@
               <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
               <a class="post__link" href="#">
                 <picture class="post__source-photo">
-                  <!-- <source media="()" srcset="">
-                          <source media="()" srcset=""> -->
+                  <source media="(min-width: 1200px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x">
+                  <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x">
                   <img class="post__photo" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x" alt="Присел на камень во время похода">
                 </picture>
               </a>
@@ -193,8 +193,8 @@
               <h3 class="visually-hidden">Фотопост пользователя нашего приложения</h3>
               <a class="post__link" href="#">
                 <picture class="post__source-photo">
-                  <!-- <source media="()" srcset="">
-                          <source media="()" srcset=""> -->
+                  <source media="(min-width: 1200px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x">
+                  <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x">
                   <img class="post__photo" src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x" alt="Пейзаж из иллюминатора самолета">
                 </picture>
               </a>
@@ -214,8 +214,7 @@
           </div>
         </div>
         <footer class="photo-content__footer">
-          <p class="photo-content__description">Затмите их всех!
-            <br> Выкладывайте всё, что накопилось в телефоне!</p>
+          <p class="photo-content__description">Затмите их всех!<br> Выкладывайте всё, что накопилось в телефоне!</p>
         </footer>
       </section>
       <section class="photo-editor">
@@ -223,8 +222,8 @@
         <form class="photo-editor__form" action="https://echo.htmlacademy.ru" method="POST">
           <div class="photo-editor__wrapper wrapper">
             <picture class="photo-editor__source-photo">
-              <!-- <source media="()" srcset="">
-                    <source media="()" srcset=""> -->
+                  <source media="(min-width: 1200px)" srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x">
+                  <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x">
               <img class="photo-editor__photo" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x" alt="Зимний пейзаж">
             </picture>
             <div class="photo-editor__interface">
