--- a/source/photo.html
+++ b/source/photo.html
@@ -271,7 +271,7 @@
         </form>
       </section>
     </main>
-    <footer class="footer page__footer">
+    <footer class="footer page__footer page__footer--photo">
       <div class="footer__wrapper wrapper">
         <a class="footer__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
           <svg class="footer__logo footer__logo--glasses" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
