--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
           </ul>
         </div>
       </nav>
-      <section class="intro intro--inner">
+      <section class="intro intro--inner intro--competition">
         <h2 class="intro__title intro__title--competition">Конкурс на самое безбашенное путешествие с Пинк</h2>
       </section>
     </header>
