Добавляет иконки телефона и почты на странице Конкурс в планшетной версии

--- a/source/form.html
+++ b/source/form.html
@@ -107,11 +107,17 @@
               <li class="data__item data__item--contacts">
                 <label class="data__label data__label--contacts" for="user-phone">Номер телефона</label>
                 <input class="data__input data__input--contacts" id="user-phone" type="tel" name="phone" placeholder="Номер, пожалуйста">
+                <svg class="data__icon" width="20" height="20">
+                  <use xlink:href="img/sprite.svg#icon-phone"></use>
+                </svg>
               </li>
               <li class="data__item data__item--contacts">
                 <label class="data__label data__label--contacts" for="user-email">Адрес почты</label>
                 <input class="data__input data__input--contacts" id="user-email" type="email" name="email" placeholder="Введите почту *"
                   required>
+                <svg class="data__icon" width="18" height="14">
+                  <use xlink:href="img/sprite.svg#icon-mail"></use>
+                </svg>
               </li>
             </ul>
           </fieldset>
