--- a/source/form.html
+++ b/source/form.html
@@ -212,5 +212,6 @@
     </section>
     <script src="js/main-nav.js"></script>
     <script src="js/picturefill.min.js"></script>
+    <script src="js/svgxuse.min.js"></script>
   </body>
 </html>
