--- a/source/index.html
+++ b/source/index.html
@@ -318,6 +318,7 @@
     </footer>
     <script src="js/main-nav.js"></script>
     <script src="js/picturefill.min.js"></script>
+    <script src="js/svgxuse.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
     <script src="js/map.js"></script>
   </body>
