--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
               <a class="menu-list__link" href="form.html">Конкурс</a>
             </li>
             <li class="menu-list__item">
-              <a class="menu-list__link" href="#">HTML Academy</a>
+              <a class="menu-list__link" href="https://htmlacademy.ru/" target="blank">HTML Academy</a>
             </li>
           </ul>
         </div>
@@ -308,7 +308,7 @@
         </ul>
         <div class="footer__copyright copyright">
           <span class="copyright__text">Разработано</span>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип HTML Academy">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="blank" aria-label="Логотип HTML Academy">
             <svg class="copyright__icon" width="27" height="34">
               <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
             </svg>
