Подключает плагин для минификации и конкатенации js. Прописывает пути до минифицированных файлов. Перемещает сторонние плагины в папку lib

--- a/source/photo.html
+++ b/source/photo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Сайт мобильного приложения Pink</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page">
     <header class="header hamburger-menu hamburger-menu--closed hamburger-menu--nojs">
@@ -346,8 +346,8 @@
         </div>
       </div>
     </footer>
-    <script src="js/main-nav.js"></script>
-    <script src="js/picturefill.min.js"></script>
-    <script src="js/svgxuse.min.js"></script>
+    <script src="js/lib/picturefill.min.js"></script>
+    <script src="js/lib/svgxuse.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
