--- a/source/form.html
+++ b/source/form.html
@@ -144,7 +144,7 @@
             <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
           <div class="competition__footer">
-            <button class="form__button button" type="submit">Отправить форму</button>
+            <a class="form__button button" href="competition.html">Отправить форму</a>
             <p class="form__description">
               <span class="form__description-simbol">*</span> — обязательные
               <span class="form__description-specify">для заполнения</span> поля</p>
