--- a/source/photo.html
+++ b/source/photo.html
@@ -9,6 +9,7 @@
     <link rel="preload" href="fonts/opensansbold.woff2" as="font">
     <link rel="preload" href="fonts/opensanslight.woff2" as="font">
     <link href="css/style.min.css" rel="stylesheet">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   </head>
   <body class="page">
     <header class="header hamburger-menu hamburger-menu--closed hamburger-menu--nojs">
