--- a/source/form.html
+++ b/source/form.html
@@ -78,7 +78,7 @@
           </fieldset>
           <fieldset class="form__fieldset form__fieldset--achievement">
             <legend class="form__legend">Ваши безбашенные достижения в путешествии</legend>
-            <ul class="form__list form__list--achievement">
+            <ul class="form__list form__wrapper form__list--achievement">
               <li class="form__item">
                 <input class="form__input visually-hidden" id="first-achievement" type="checkbox" name="first-achievement" checked>
                 <label class="form__label form__label--checkbox" for="first-achievement">Сделал селфи с акулой</label>
@@ -127,7 +127,7 @@
           </fieldset>
           <fieldset class="form__fieldset form__fieldset--app">
             <legend class="form__legend">С каким приложением путешествовали?</legend>
-            <ul class="form__list">
+            <ul class="form__list form__wrapper">
               <li class="form__item form__item--app">
                 <input class="form__input visually-hidden" id="version-ios" type="radio" name="version-app" checked>
                 <label class="form__label form__label--radio" for="version-ios">Pink для iOS</label>
