Исправляет ошибки в разметке по методологии. Критерий Б5

--- a/source/photo.html
+++ b/source/photo.html
@@ -265,7 +265,7 @@
             <div class="photo-editor__interface">
               <div class="photo-editor__filter">
                 <input class="visually-hidden" id="tool-crop" type="radio" name="tool" value="crop">
-                <label class="photo-editor__label" for="tool-crop">
+                <label class="photo-editor__label scale" for="tool-crop">
                   <span class="photo-editor__control photo-editor__control--crop" aria-label="Обрезка фотографии">
                     <svg class="photo-editor__icon photo-editor__icon--crop" width="46" height="45">
                       <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
@@ -276,7 +276,7 @@
                   </span>
                 </label>
                 <input class="visually-hidden" id="tool-fill" type="radio" name="tool" value="fill">
-                <label class="photo-editor__label" for="tool-fill">
+                <label class="photo-editor__label scale" for="tool-fill">
                   <span class="photo-editor__control photo-editor__control--fill" aria-label="Выбор цвета фотографии">
                     <svg class="photo-editor__icon photo-editor__icon--fill" width="49" height="45">
                       <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
@@ -287,7 +287,7 @@
                   </span>
                 </label>
                 <input class="visually-hidden" id="tool-contrast" type="radio" name="tool" value="contrast">
-                <label class="photo-editor__label" for="tool-contrast">
+                <label class="photo-editor__label scale" for="tool-contrast">
                   <span class="photo-editor__control photo-editor__control--contrast" aria-label="Выбор контрастности фотографии">
                     <svg class="photo-editor__icon photo-editor__icon--contrast" width="33" height="33">
                       <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
