--- a/source/index.html
+++ b/source/index.html
@@ -236,7 +236,7 @@
               </td>
             </tr>
           </table>
-          <div class="tariff-selection__bullets slider__bullets">
+          <div class="price__bullets slider__bullets">
             <button class="slider__button" type="button" aria-label="Кнопка переключения на первый слайд">
               <span class="slider__bullet" aria-label="Первый переключатель"></span>
             </button>
