Убирает лишние атрибуты aria-label на главной странице

--- a/source/form.html
+++ b/source/form.html
@@ -151,7 +151,8 @@
             <button class="form__button button" type="submit">Отправить форму</button>
             <p class="form__description">
               <span class="form__description-simbol">*</span> — обязательные
-              <span class="form__description-specify">для заполнения</span> поля</p>
+              <span class="form__description-specify">для заполнения</span> поля
+            </p>
           </div>
         </form>
       </section>
