Убирает лишние атрибуты aria-label на странице Конкурс

--- a/source/form.html
+++ b/source/form.html
@@ -17,14 +17,14 @@
       <nav class="main-nav">
         <div class="main-nav__wrapper">
           <div class="main-nav__menu">
-            <a class="header__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
-              <svg class="header__logo header__logo--text" width="75" height="23" aria-label="Мобильная версия логотипа приложения Pink ">
+            <a class="header__logo-link" href="index.html" aria-label="Логотип мобильного приложения Pink">
+              <svg class="header__logo header__logo--text" width="75" height="23">
                 <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
               </svg>
-              <svg class="header__logo header__logo--glasses" width="146" height="40" aria-label="Планшетная версия логотипа приложения Pink">
+              <svg class="header__logo header__logo--glasses" width="146" height="40">
                 <use xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
               </svg>
-              <svg class="header__logo header__logo--element-decore" width="146" height="40" aria-label="Десктопная версия логотипа приложения Pink">
+              <svg class="header__logo header__logo--element-decore" width="146" height="40">
                 <use xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
               </svg>
             </a>
@@ -159,11 +159,11 @@
     </main>
     <footer class="footer page__footer page__footer--competition">
       <div class="footer__wrapper wrapper">
-        <a class="footer__logo-link" href="index.html" aria-label="Ссылка на главную страницу Pink">
-          <svg class="footer__logo footer__logo--glasses" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+        <a class="footer__logo-link" href="index.html" aria-label="Логотип мобильного приложения Pink">
+          <svg class="footer__logo footer__logo--glasses" width="146" height="40">
             <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
           </svg>
-          <svg class="footer__logo footer__logo--element-decore" width="146" height="40" aria-label="Мобильная и планшетная версия логотипа приложения Pink">
+          <svg class="footer__logo footer__logo--element-decore" width="146" height="40">
             <use xlink:href="img/sprite.svg#logo-pink-blue-desktop"></use>
           </svg>
         </a>
