Исправляет замечание переноса элемента footer блока competition до планшетной версии. Критерий Б14

--- a/source/form.html
+++ b/source/form.html
@@ -147,7 +147,7 @@
             <label class="visually-hidden" for="user-comment">Комментарии о нашем приложении</label>
             <textarea class="form__textarea" id="user-comment" name="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
-          <div class="competition__footer">
+          <div class="competition__footer wrapper">
             <button class="form__button button" type="submit">Отправить форму</button>
             <p class="form__description">
               <span class="form__description-simbol">*</span> — обязательные
