Исправляет замечание по критерию Д13.

--- a/source/form.html
+++ b/source/form.html
@@ -166,7 +166,7 @@
       </section>
     </main>
     <footer class="footer page__footer page__footer--competition">
-      <div class="footer__wrapper wrapper">
+      <div class="footer__wrapper">
         <a class="footer__logo-link" href="index.html" aria-label="Логотип мобильного приложения Pink">
           <svg class="footer__logo footer__logo--glasses" width="146" height="40">
             <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
