--- a/source/index.html
+++ b/source/index.html
@@ -295,7 +295,7 @@
       </article>
     </main>
     <footer class="footer footer--hidden page__footer">
-      <div class="footer__wrapper wrapper">
+      <div class="footer__wrapper">
         <a class="footer__logo-link" aria-label="Логотип мобильного приложения Pink">
           <svg class="footer__logo footer__logo--glasses" width="146" height="40">
             <use xlink:href="img/sprite.svg#logo-pink-blue"></use>
